methods.flowerpot.FlowerCase.scala.error
Erreur de compilation :
FlowerCase:31: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime19.FlowerCase'
def run() {
    ^